--- a/AppRiesgosPersonales/app/src/main/res/layout/rv_perfil_app.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/rv_perfil_app.xml
@@ -38,6 +38,16 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
+            <ImageView
+                android:id="@+id/riesgoIcon_iv"
+                style="@style/RecyclerIconStyle"
+                android:layout_width="16dp"
+                android:layout_height="16dp"
+                android:layout_marginEnd="6dp"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_vertical"
+                android:src="@drawable/circle" />
+
             <TextView
                 android:id="@+id/appAddedName_tv"
                 android:layout_width="wrap_content"
@@ -59,12 +69,13 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/appAddedCategory_tv"
+            android:id="@+id/assetAddedVuln_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="22dp"
             android:inputType="textMultiLine"
             android:textSize="15sp"
-            tools:text="Categoria" />
+            tools:text="x vulnerabilidades" />
 
     </LinearLayout>
 
