--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail.xml
@@ -1,144 +1,139 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fillViewport="true"
     android:orientation="vertical"
     tools:context="es.unican.appriegospersonales.activities.apps.detail.AssetDetailView">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_margin="24dp"
+                app:cardCornerRadius="14dp">
+
+                <ImageView
+                    android:id="@+id/appDetailIcon_iv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:srcCompat="@tools:sample/avatars" />
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="24dp"
+                    android:paddingRight="24dp">
+
+                    <TextView
+                        android:id="@+id/appDetailName_tv"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:inputType="textMultiLine"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        tools:text="Aplicacion" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="8dp"
+                    android:paddingRight="24dp">
+
+                    <TextView
+                        android:id="@+id/appDetailCategory_tv"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:inputType="textMultiLine"
+                        android:textColor="@color/primary"
+                        android:textSize="15sp"
+                        tools:text="Tipo" />
+
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/appAdd_bt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="2dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginBottom="2dp"
+                android:background="@drawable/button"
+                android:text="@string/dElement_detail_add"
+                android:textAllCaps="false" />
+
+        </LinearLayout>
 
         <androidx.cardview.widget.CardView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_margin="24dp"
-            app:cardCornerRadius="14dp">
-
-            <ImageView
-                android:id="@+id/appDetailIcon_iv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:srcCompat="@tools:sample/avatars" />
-        </androidx.cardview.widget.CardView>
-
-        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="15dp"
+            android:elevation="10dp"
+            app:cardCornerRadius="10dp">
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="24dp"
-                android:paddingRight="24dp">
-
-                <TextView
-                    android:id="@+id/appDetailName_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:inputType="textMultiLine"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
-                    tools:text="Aplicacion" />
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="8dp"
-                android:paddingRight="24dp">
-
-                <TextView
-                    android:id="@+id/appDetailCategory_tv"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:inputType="textMultiLine"
-                    android:textColor="@color/primary"
-                    android:textSize="15sp"
-                    tools:text="Tipo" />
-
-            </LinearLayout>
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/appAdd_bt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="2dp"
-            android:layout_marginRight="24dp"
-            android:layout_marginBottom="2dp"
-            android:background="@drawable/button"
-            android:text="@string/dElement_detail_add"
-            android:textAllCaps="false" />
-
-    </LinearLayout>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="15dp"
-        android:elevation="10dp"
-        app:cardCornerRadius="10dp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/severityCvesInfo_tv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_horizontal"
-                android:text="@string/perfil_severity"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                tools:text="Gravedad de las vulnerabilidades" />
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/severityCvesInfo_tv"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal"
+                    android:text="@string/perfil_severity"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    tools:text="Gravedad de las vulnerabilidades" />
 
 
-            <com.github.mikephil.charting.charts.PieChart
-                android:id="@+id/cve_pc"
-                android:layout_width="match_parent"
-                android:layout_height="150dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                android:layout_gravity="center_horizontal" />
-        </LinearLayout>
-    </androidx.cardview.widget.CardView>
+                <com.github.mikephil.charting.charts.PieChart
+                    android:id="@+id/cve_pc"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-<!--    <TextView-->
-<!--        android:id="@+id/infoRiesgos_tv"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:paddingLeft="24dp"-->
-<!--        android:paddingTop="24dp"-->
-<!--        android:paddingRight="24dp"-->
-<!--        android:text="@string/asset_detail_cves_title"-->
-<!--        android:textSize="20sp"-->
-<!--        android:textStyle="bold"-->
-<!--        tools:text="Vulnerabilidades" />-->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/assetDetail_cves_rv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/assetDetail_cves_rv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-</LinearLayout>
+    </LinearLayout>
+</androidx.core.widget.NestedScrollView>
