--- a/AppRiesgosPersonales/app/src/main/res/layout/rv_assets_cve.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/rv_assets_cve.xml
@@ -7,6 +7,7 @@
     android:layout_margin="8dp">
 
     <LinearLayout
+        android:id="@+id/containerCve_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
@@ -38,8 +39,14 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
         android:layout_marginStart="8dp"
         android:src="@drawable/arrow_forward" />
+
+    <com.github.mikephil.charting.charts.HorizontalBarChart
+        android:id="@+id/impacto_hbc"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:padding="8dp"
+        android:layout_below="@id/containerCve_ll" />
 
 </RelativeLayout>
