--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail.xml
@@ -34,6 +34,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="20dp"
                 android:orientation="vertical">
 
                 <LinearLayout
@@ -72,6 +73,25 @@
                         tools:text="Tipo" />
 
                 </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:paddingTop="8dp"
+                    android:paddingRight="24dp">
+
+                    <TextView
+                        android:id="@+id/numCves_tv"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:inputType="textMultiLine"
+                        android:textSize="15sp"
+                        tools:text="X vulnerabilidades" />
+
+                </LinearLayout>
+
             </LinearLayout>
         </LinearLayout>
 
