--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_cves.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_cves.xml
@@ -9,17 +9,18 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginLeft="17dp"
+        android:layout_marginTop="17dp"
+        android:layout_marginRight="17dp"
+        android:layout_marginBottom="17dp"
         android:elevation="10dp"
         app:cardCornerRadius="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_margin="8dp">
 
             <TextView
                 android:id="@+id/severityCvesInfo_tv"
