--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_cves.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_cves.xml
@@ -38,8 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp" />
+                android:layout_marginTop="2dp"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
