Cambiar tarta de vulnerabilidades por barra de seguridad

--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_eco.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_eco.xml
@@ -40,7 +40,7 @@
                     android:textStyle="bold" />
 
                 <es.unican.appriegospersonales.common.TextThumbSeekBar
-                    android:id="@+id/seekBar"
+                    android:id="@+id/eco_sb"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:max="100"
