--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail.xml
@@ -63,22 +63,22 @@
                     android:paddingTop="8dp">
 
                     <ImageView
-                        android:id="@+id/riesgoIcon_iv"
+                        android:id="@+id/securityIcon_iv"
                         style="@style/RecyclerIconStyle"
                         android:layout_width="16dp"
                         android:layout_height="16dp"
                         android:layout_gravity="center_vertical"
                         android:layout_marginEnd="6dp"
-                        android:src="@drawable/circle" />
+                        android:src="@drawable/security" />
 
                     <TextView
-                        android:id="@+id/numCves_tv"
+                        android:id="@+id/security_tv"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:inputType="textMultiLine"
                         android:textSize="16sp"
-                        tools:text="X vulnerabilidades" />
+                        tools:text="65/100 seguro" />
                 </LinearLayout>
 
                 <LinearLayout
