--- a/AppRiesgosPersonales/app/src/main/res/layout/rv_controles_riesgo.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/rv_controles_riesgo.xml
@@ -7,7 +7,7 @@
     android:layout_marginTop="8dp">
 
     <ImageView
-        android:id="@+id/riesgoIcon_iv"
+        android:id="@+id/securityIcon_iv"
         android:layout_width="24dp"
         android:layout_height="24dp"
         style="@style/RecyclerIconStyle"
@@ -17,7 +17,7 @@
         android:id="@+id/containerLLriesgoName_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/riesgoIcon_iv"
+        android:layout_toEndOf="@id/securityIcon_iv"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
