--- a/AppRiesgosPersonales/app/src/main/res/layout/rv_riesgos_riesgo.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/rv_riesgos_riesgo.xml
@@ -6,7 +6,7 @@
     android:layout_margin="8dp">
 
     <ImageView
-        android:id="@+id/riesgoIcon_iv"
+        android:id="@+id/securityIcon_iv"
         android:layout_width="24dp"
         android:layout_height="24dp"
         style="@style/RecyclerIconStyle"
@@ -16,7 +16,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toEndOf="@id/riesgoIcon_iv"
+        android:layout_toEndOf="@id/securityIcon_iv"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="14dp"
         android:layout_marginBottom="4dp"
