--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_cves.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_cves.xml
@@ -9,10 +9,7 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="17dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginRight="17dp"
-        android:layout_marginBottom="17dp"
+        android:layout_margin="17dp"
         android:elevation="10dp"
         app:cardCornerRadius="10dp">
 
