--- a/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_cves.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/fragment_asset_detail_cves.xml
@@ -25,10 +25,7 @@
                 android:layout_height="match_parent"
                 android:gravity="center_horizontal"
                 android:text="@string/perfil_severity"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                tools:text="Gravedad de las vulnerabilidades" />
-
+                android:textSize="16sp"/>
 
             <com.github.mikephil.charting.charts.PieChart
                 android:id="@+id/cve_pc"
@@ -38,6 +35,39 @@
                 android:layout_marginTop="2dp"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
+
+    <LinearLayout
+        android:id="@+id/sort_ll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="17dp"
+        android:layout_marginRight="17dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:text="@string/fallos_de_seguridad" />
+
+        <ImageView
+            android:id="@+id/sort_iv"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/sort" />
+
+        <TextView
+            android:id="@+id/sortInfo_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|center_vertical"
+            android:layout_marginLeft="2dp"
+            android:textSize="12sp"
+            tools:text="Mayor a menor seguridad"/>
+    </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/assetDetail_cves_rv"
