--- a/AppRiesgosPersonales/app/src/main/res/layout/sorting_options_cves.xml
+++ b/AppRiesgosPersonales/app/src/main/res/layout/sorting_options_cves.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ordenar_activos_perfil_ll"
+    android:id="@+id/ordenar_cves_ll"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -16,22 +16,22 @@
         android:textStyle="bold"/>
 
     <LinearLayout
-        android:id="@+id/seguridadAsc_ll"
+        android:id="@+id/fechaRec_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/seguridadAsc_tv"
+            android:id="@+id/fecahRec_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="15sp"
-            android:text="@string/ordenarSeguridad_Asc" />
+            android:text="@string/ordenarFecha_Rec" />
 
         <ImageView
-            android:id="@+id/seguridadAsc_iv"
+            android:id="@+id/fechaRec_iv"
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_gravity="end"
@@ -42,22 +42,22 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/seguridadDesc_ll"
+        android:id="@+id/fechaAnt_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="8dp">
 
         <TextView
-            android:id="@+id/seguridadDesc_tv"
+            android:id="@+id/fechaAnt_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="15sp"
-            android:text="@string/ordenarSeguridad_Desc" />
+            android:text="@string/ordenarFecha_Ant" />
 
         <ImageView
-            android:id="@+id/seguridadDesc_iv"
+            android:id="@+id/fechaAnt_iv"
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_gravity="end"
@@ -68,22 +68,22 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/sostAsc_ll"
+        android:id="@+id/gravedadAsc_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="8dp">
 
         <TextView
-            android:id="@+id/sostAsc_tv"
+            android:id="@+id/gravedadAsc_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="15sp"
-            android:text="@string/ordenarSost_Asc" />
+            android:text="@string/ordenarGravedad_Asc" />
 
         <ImageView
-            android:id="@+id/sostAsc_iv"
+            android:id="@+id/gravedadAsc_iv"
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_gravity="end"
@@ -94,22 +94,22 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/sostDesc_ll"
+        android:id="@+id/gravedadDesc_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="8dp">
 
         <TextView
-            android:id="@+id/sostDesc_tv"
+            android:id="@+id/gravedadDesc_tv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textSize="15sp"
-            android:text="@string/ordenarSost_Desc" />
+            android:text="@string/ordenarGravedad_Desc" />
 
         <ImageView
-            android:id="@+id/sostDesc_iv"
+            android:id="@+id/gravedadDesc_iv"
             android:layout_width="22dp"
             android:layout_height="22dp"
             android:layout_gravity="end"
